(BugId:24549) word-wrapping inside MiniEditor in Visual Mode
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@49991 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/MiniEditor/css/core/content.scss
+++ b/extensions/wikia/MiniEditor/css/core/content.scss
@@ -16,4 +16,5 @@ html.resizing {
 
 #bodyContent {
 	margin-bottom: 0;
+	word-wrap: break-word;
 }
